[package]
name = "chatproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
federation = []

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
crypto-hash = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.3.0", features = ["v4", "fast-rng", "serde"]}
