[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-std = { version = "1.12.0", features = ["attributes"] }
chatproto = { path = "../chatproto" }
crossterm  = "0.25"
lazy_static = "1.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
structopt = { version = "0.3.26", features = ["color"] }
ratatui = "0.24"
